--- a/sandbox/templates/submission.html
+++ b/sandbox/templates/submission.html
@@ -75,6 +75,40 @@
         >
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
+              <a class="nav-link navvi" style="margin-left: 10px;margin-right: 10px;cursor:default;" data-bs-toggle="modal" data-bs-target="#iModal">Instructions</a>
+  
+                  <!-- <button type="button" class="btn btn-primary">
+                      Launch demo modal
+                  </button> -->
+                  
+                  <!-- Modal -->
+                  <div class="modal fade" id="iModal" tabindex="-1" aria-labelledby="LogoutModalLabel" aria-hidden="true">
+                      <div class="modal-dialog">
+                      <div class="modal-content">
+                          <div class="modal-header">
+                          <h5 class="modal-title" id="LogoutModalLabel">Instructions!</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body text-center " style="text-align: left;">
+                            <ol>
+                              <li>
+                                This round comprises of 6 questions. All questions have marketing scheme +100 for right answer.
+                              </li>
+                              <li>
+                                Please play the game in full screen (Fn+F11) for better resolution.
+                              </li>
+                            </ol>
+                            
+                          </div>
+                          <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <!-- <button type="button" class="btn btn-danger">Logout</button> -->
+                          </div>
+                      </div>
+                      </div>
+                  </div>
+          </li>
+            <li class="nav-item">
               <a
                 class="nav-link active navvi"
                 aria-current="page"
