--- a/clash/static/css/leaderboard.css
+++ b/clash/static/css/leaderboard.css
@@ -23,8 +23,9 @@ body {
 }
 
 .maincard {
-  margin-top: 30%;
-  margin-left: 10%;
+  /* margin-top: 30%; */
+  /* margin-left: 10%; */
+  width: 25%;
   text-align: center;
   height: 300px;
   border-radius: 25px;
@@ -90,183 +91,71 @@ body {
 }
 
 .maincnt {
-  height: calc(100vh - 92px);
-}
-/*
-@media (max-width:768px)
-{
-    .maincard{
-    margin-left: 10%;
-    text-align:center;
-    height:300px;
-    border-radius: 25px;
-    box-shadow: 0px 1px 4px #16873d;
-    width:100%;
-    font-size: x-large;
-    }
-    .first{
-        margin-top: 5px;
-        background-color:#2e353e;
-        
-    }
-    .rank{
-        background-color:#2e353e;
-        color:white;
-        border: 1px solid #192626;
-        font-size :15px;
-    }
-    
-    .score{
-        background-color:#2e353e;
-        color:white;
-        border: 1px solid #192626;
-        font-size:15px;
-    }
-    
-    .table{
-        width:100%;
-        margin-top: 20px;
-        border: 2px solid #16873d;
-        box-shadow: 0px 5px 20px 2px #16873d;
-        background-color:#2e353e;
-        color:white;
-        margin-right: 20%;
-
-    }
+  height: calc(100vh - 112px);
+  display: flex;
+  flex-direction: row;
 }
 
-@media (max-width:375px)
-{
-    .maincard{
-    margin-left: 15%;
-    margin-top: 20%;
-    width:300px;
-    text-align:center;
-    height:300px;
-    border-radius: 25px;
-    box-shadow: 0px 1px 4px #16873d;
-
-    }
-    .first{
-        margin-top: 5px;
-        background-color:#2e353e;
-        
-    }
-    .rank{
-        background-color:#2e353e;
-        color:white;
-        border: 1px solid #192626;
-        font-size :15px;
-    }
-    
-    .score{
-        background-color:#2e353e;
-        color:white;
-        border: 1px solid #192626;
-        font-size:15px;
-    }
-    
-    .table{
-        width:100%;
-        margin-top: 20px;
-        border: 2px solid #16873d;
-        box-shadow: 0px 5px 20px 2px #16873d;
-        background-color:#2e353e;
-        color:white;
-        margin-right: 20%;
-
-    }
+.maincard{
+  width: calc(25% - 40px);
+  margin: 20px;
+  margin-top: 45px;
 }
-*/
-@media (max-width: 768px) {
-  .rank {
-    font-size: 1.7vw;
-    height: 100px;
-    margin: 4px;
-    margin-bottom: 20px;
-    margin-left: 25%;
-    width: 50%;
-  }
-  .score {
-    font-size: 1.7vw;
-    height: 100px;
-    margin: 4px;
-    margin-left: 25%;
-    margin-bottom: 20px;
-    width: 50%;
+
+.tabdiv{
+  width: calc(75% - 20px);
+  margin: 20px;
+}
+
+
+@media (max-width:1092px) {
+
+  .maincard{
+    width: 40%;
   }
 
-  .maincard {
-    margin-top: 30%;
-    /* margin-left: 25%; */
-    /* margin-left: 10%; */
-    text-align: center;
-    height: 400px;
-    border-radius: 25px;
-    box-shadow: 2px 2px 10px black;
+  .tabdiv{
+    width: 60%;
   }
-  .table {
-    /* width:100%; */
-    /* overflow-x: hidden; */
-    margin-right: 20px;
-  }
-  .circle {
-    margin-left: 45%;
-  }
-  .maincnt {
-    height: auto;
+  .maincnt{
+    height: fit-content;
   }
 }
 
-@media (max-width: 980px) {
-  .rank {
-    font-size: 1.7vw;
-    height: 100px;
-    margin: 4px;
-    margin-bottom: 20px;
+@media (max-width:950px) {
 
-    width: 100%;
+  .maincnt{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  .score {
-    font-size: 1.7vw;
-    height: 100px;
-    margin: 4px;
-
-    margin-bottom: 20px;
-    width: 100%;
-  }
-
-  .maincnt {
-    height: auto;
-  }
-}
-@media (max-width: 375px) {
-  .maincard {
-    margin-left: 15%;
-    margin-top: 20%;
+  .maincard{
     width: 300px;
-    text-align: center;
     height: 300px;
-    border-radius: 25px;
-  }
-  .first {
-    margin-top: 5px;
-  }
-  .rank {
-    font-size: 15px;
   }
 
-  .score {
-    font-size: 15px;
-  }
-
-  .table {
+  .tabdiv{
     width: 100%;
-    margin-top: 20px;
-    margin-right: 20%;
   }
 
-  .maincnt {
-    height: auto;
+  .maincnt{
+    height: fit-content;
+  }
+}
+
+@media (max-width:450px) {
+
+  .tabdiv{
+    margin: 0px;
+    padding: 0px;
+  }
+  .table,.tdiv{
+    margin: 0px;
+    padding: 0px;
+    font-size: 12px;
+  }
+
+  .maincnt{
+    height: fit-content;
   }
 }
