--- a/clash/templates/login.html
+++ b/clash/templates/login.html
@@ -75,6 +75,7 @@
             <div class="footer-text pt-3 pb-3">PISB <span>&copy</span></div>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
