--- a/sandbox/templates/base.html
+++ b/sandbox/templates/base.html
@@ -286,6 +286,7 @@
         }, 0)
     }());
 </script>
+<script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
 </html>
 
 
