--- a/clash/templates/home.html
+++ b/clash/templates/home.html
@@ -108,4 +108,5 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
+  <script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
 </html>
