--- a/clash/templates/leaderboard.html
+++ b/clash/templates/leaderboard.html
@@ -381,5 +381,5 @@
    document.getElementById('initl').textContent=b;
    
 </script>
-
+<script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
 </html>
