--- a/clash/templates/mysub.html
+++ b/clash/templates/mysub.html
@@ -497,4 +497,5 @@
         document.getElementById('ssrrnnood').style.display='block';
     }
 </script>
+<script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
 </html>
