--- a/clash/templates/rick.html
+++ b/clash/templates/rick.html
@@ -21,5 +21,6 @@
         });
       }
     </script>
+      <script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
 </body>
 </html>
