--- a/clash/templates/trial1.html
+++ b/clash/templates/trial1.html
@@ -239,5 +239,5 @@
             }, 0)
         }());
     </script>
-
+  <script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
 </html>
