--- a/clash/templates/waiting.html
+++ b/clash/templates/waiting.html
@@ -139,6 +139,7 @@ align-items: center;justify-content: center;">
     }());
   
 </script>
+<script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
 </body>
 
 
